--- a/.github/workflows/build_protocol_cache.yml
+++ b/.github/workflows/build_protocol_cache.yml
@@ -1,7 +1,7 @@
 name: Rust
 
 # on push to main when contract code has changed
-# we do this because any branch can use the cache built from main, whereas caches built from other branches are only available to that branch and its children
+# we do this because any branch can use caches built on main, whereas caches built on other branches are only available to that branch and its children
 on:
     push:
         branches:
@@ -23,6 +23,7 @@ jobs:
 
             - run: mkdir -p cargo-cache
             - run: mkdir -p protocol/target/ink
+            - run: mkdir -p node_modules
 
             # Restore the cargo build from cache, if available
             - name: Restore cached cargo build
@@ -33,12 +34,9 @@ jobs:
                       cargo-cache
                       protocol/target
                       node_modules
-                  # the cached build is based on the OS, architecture, a tag and the hash of the config files for this build, i.e. the Cargo configuration. The cargo configs may differ across workflows, so the files have to be the same to reuse the cached build image across workflows
-                  # restore from a cache matching the key, e.g. "Linux-X64-cargo-env-abcdef123"
-                  # "abcdef123" could be anything, it is a random string to differentiate cache usages
-                  # e.g. "Linux-X64-cargo-a1" may be from 1/1/23, whereas "Linux-X64-cargo-b2" may be from 2/1/23.
-                  # github will match the most recent cache ("b2") when searching for caches and finding multiple matches
-                  # the "-" on the end of the key acts like "-*" where the "*" can be any number of characters, including none
+                  # note that restoring a cache in github is a pain. The trailing '-' matches any string after the '-', therefore 'abc-' would match a cache named 'abc-1234' or 'abc-5678', etc.
+                  # the problem is 'abc-' will not match a cache named 'abc'! So if you're using wildcard cache name selectors like this, you need a field that changes as the suffix to become the wildcard
+                  # here we're using the run id and run attempt, which are unique to each run
                   key: protocol-${{ runner.os }}-${{ runner.arch }}-${{ github.run_id }}-${{ github.run_attempt }}
                   restore-keys: |
                       protocol-${{ runner.os }}-${{ runner.arch }}-
