--- a/.github/workflows/build_protocol_cache.yml
+++ b/.github/workflows/build_protocol_cache.yml
@@ -60,7 +60,8 @@ jobs:
             - name: Build contract
               id: build
               run: |
-                  touch protocol/target/ink/$(date | tr ' ' '_')
+                  cd protocol/dev
+                  npm run cli -- build --docker "prosopo/contracts-ci-linux:3.0.1"
 
             # print cache state after build, etc
             - name: ls
