--- a/.github/workflows/build_protocol_cache.yml
+++ b/.github/workflows/build_protocol_cache.yml
@@ -22,7 +22,7 @@ jobs:
             - uses: actions/checkout@v3
 
             # make cache dirs
-            - run: mkdir -p cargo-cache
+            - run: mkdir -p protocol/cargo-cache
             - run: mkdir -p protocol/target/ink
             - run: mkdir -p node_modules
 
@@ -32,7 +32,7 @@ jobs:
               id: cache-restore
               with:
                   path: |
-                      cargo-cache
+                      protocol/cargo-cache
                       protocol/target
                       node_modules
                   # note that restoring a cache in github is a pain. The trailing '-' matches any string after the '-', therefore 'abc-' would match a cache named 'abc-1234' or 'abc-5678', etc.
@@ -47,7 +47,7 @@ jobs:
               run: |
                   set -x
                   ls -la
-                  ls -la cargo-cache
+                  ls -la protocol/cargo-cache
                   ls -la protocol/target/ink
             
             - run: docker pull prosopo/contracts-ci-linux:3.0.1
@@ -68,7 +68,7 @@ jobs:
               run: |
                   set -x
                   ls -la
-                  ls -la cargo-cache
+                  ls -la protocol/cargo-cache
                   ls -la protocol/target/ink
 
             # remove old caches
@@ -95,7 +95,7 @@ jobs:
               if: always()
               with:
                   path: |
-                      cargo-cache
+                      protocol/cargo-cache
                       protocol/target
                       node_modules
                   key: protocol-${{ runner.os }}-${{ runner.arch }}-${{ github.run_id }}-${{ github.run_attempt }}
