--- a/.github/workflows/tmp2.yml
+++ b/.github/workflows/tmp2.yml
@@ -22,8 +22,8 @@ jobs:
 
             # Restore the cargo build from cache, if available
             - name: Restore cached cargo build
-              uses: actions/cache@v3
-              id: cache-restore
+              uses: actions/cache/restore@v3
+              id: cache
               with:
                   path: |
                       protocol/cargo-cache
