tmp remove build from github actions rust workflow

--- a/.github/workflows/build_protocol_cache.yml
+++ b/.github/workflows/build_protocol_cache.yml
@@ -60,8 +60,7 @@ jobs:
             - name: Build contract
               id: build
               run: |
-                  cd protocol/dev
-                  npm run cli -- build --docker "prosopo/contracts-ci-linux:3.0.1"
+                  touch protocol/target/ink/$(date | tr ' ' '_')
 
             # print cache state after build, etc
             - name: ls
