--- a/.github/workflows/image_provider.yml
+++ b/.github/workflows/image_provider.yml
@@ -69,8 +69,8 @@ jobs:
       - name: Build cli production bundle
         run: |
           cd captcha
-          cp ./dev/env.rococo ./packages/cli/.env.rococo
-          NODE_ENV=rococo npm run -w @prosopo/cli build:prod
+          cp ./dev/env.rococo ./packages/cli/.env.production
+          NODE_ENV=production npm run -w @prosopo/cli build:prod
 
       # create the provider image
       - name: Build provider image
@@ -91,8 +91,8 @@ jobs:
         run: |
           if [ "${{ github.ref }}" != "refs/heads/main" ]; then exit 0; fi
           cd captcha
-          cp ./dev/env.rococo ./packages/cli/.env.rococo
-          NODE_ENV=rococo npm run -w @prosopo/procaptcha-bundle build:prod
+          cp ./dev/env.rococo ./packages/cli/.env.production
+          NODE_ENV=production npm run -w @prosopo/procaptcha-bundle build:prod
           docker build -f ./docker/images/js.server.dockerfile . -t prosopo/js_server:latest
           docker push prosopo/js_server:latest
           docker tag prosopo/js_server:latest prosopo/js_server:${{ env.PROVIDER_IMAGE_VERSION }}
