fix ls paths in github actions workflows

--- a/.github/workflows/tmp2.yml
+++ b/.github/workflows/tmp2.yml
@@ -42,6 +42,6 @@ jobs:
               run: |
                   set -x
                   ls -la
-                  ls -la cargo-cache
-                  ls -la protocol/target/ink
+                  ls -la protocol/cargo-cache
+                  ls -la protocol/target/*
             
