more gha path fixing

--- a/.github/workflows/build_protocol_cache.yml
+++ b/.github/workflows/build_protocol_cache.yml
@@ -44,7 +44,7 @@ jobs:
                   set -x
                   ls -la
                   ls -la protocol/cargo-cache
-                  ls -la protocol/target/*
+                  ls -la protocol/target/* || true
             
             - name: Npm install
               run: |
@@ -61,7 +61,7 @@ jobs:
                   set -x
                   ls -la
                   ls -la protocol/cargo-cache
-                  ls -la protocol/target/*
+                  ls -la protocol/target/* || true
 
             - name: Cleanup protocol caches
               if: always()
