--- a/.github/workflows/tmp2.yml
+++ b/.github/workflows/tmp2.yml
@@ -45,6 +45,12 @@ jobs:
                   ls -la protocol/cargo-cache
                   ls -la protocol/target/* || true
 
+
+
+            - run: docker pull mongo:5.0.4
+
+            - run: docker pull prosopo/substrate-contracts-node:v0.25
+
             - name: Build contracts
               id: build
               run: |
