try adding git-fetch-with-cli to rust workflow
to fix "update cargo.io index" taking ages

--- a/protocol/contracts/common/Cargo.toml
+++ b/protocol/contracts/common/Cargo.toml
@@ -21,3 +21,6 @@ default = ["std"]
 std = ["ink/std", "scale/std", "scale-info/std"]
 ink-as-dependency = [ "scale-info/derive" ]
 test-dependency = []
+
+[net]
+git-fetch-with-cli = true
