--- a/protocol/contracts/captcha/Cargo.toml
+++ b/protocol/contracts/captcha/Cargo.toml
@@ -44,3 +44,6 @@ overflow-checks = false
 default = ["std"]
 std = ["ink/std", "scale/std", "scale-info/std"]
 ink-as-dependency = []
+
+[net]
+git-fetch-with-cli = true
