--- a/protocol/crates/disable_macro/Cargo.toml
+++ b/protocol/crates/disable_macro/Cargo.toml
@@ -12,3 +12,6 @@ description = "macro that disables all functions"
 [dependencies]
 quote = "1.0"
 proc-macro2 = "1.0.51"
+
+[net]
+git-fetch-with-cli = true
