--- a/.github/workflows/build_project_cache.yml
+++ b/.github/workflows/build_project_cache.yml
@@ -49,11 +49,26 @@ jobs:
                   ls -la node_modules
             
             - run: npm install
+            
+            - name: Rust formatting check
+              run: |
+                  cd protocol/dev
+                  npm run cli -- fmt --all --verbose --check --docker
 
+            - name: Clippy
+              run: |
+                  cd protocol/dev
+                  npm run cli -- clippy --docker -- -- -D warnings
+            
             - name: Build contracts
               run: |
                   cd protocol/dev
-                  npm run cli -- build --docker "prosopo/contracts-ci-linux:3.0.1"
+                  npm run cli -- build --docker
+
+            - name: Test contract
+              run: |
+                  cd protocol/dev
+                  RUST_BACKTRACE=1 npm run cli -- test --docker
 
             - name: ls
               run: |
