--- a/.github/workflows/tests_protocol.yml
+++ b/.github/workflows/tests_protocol.yml
@@ -1,13 +1,12 @@
-name: Rust
+name: tests_protocol
 
 on:
     pull_request:
         branches:
-            - 'develop'
             - 'main'
         paths:
             - 'protocol/**'
-            - '.github/workflows/tests_rust.yml'
+            - '.github/workflows/**'
 
 env:
     CARGO_TERM_COLOR: always
@@ -17,86 +16,41 @@ jobs:
     build:
         runs-on: ubuntu-latest
         steps:
-            # Checkout the repo
             - uses: actions/checkout@v3
 
-            - name: Npm install
-              run: |
-                  cd protocol/dev
-                  npm install
+            - run: npm install
 
-            # Check if rust is formatted correctly
             - name: Rust formatting check
               run: |
                   cd protocol/dev
                   npm run cli -- fmt --all --verbose --check --docker
 
-            # Restore the cargo build from cache, if available
-            - name: Restore cached cargo build
+            - name: Restore cache
               uses: actions/cache/restore@v3
               with:
                   path: |
+                      protocol/cargo-cache
                       protocol/target
-                  # the cached build is based on the OS, architecture, a tag and the hash of the config files for this build, i.e. the Cargo configuration. The cargo configs may differ across workflows, so the files have to be the same to reuse the cached build image across workflows
-                  # restore from a cache matching the key, e.g. "Linux-X64-cargo-env-abcdef123"
-                  # "abcdef123" could be anything, it is a random string to differentiate cache usages
-                  # e.g. "Linux-X64-cargo-a1" may be from 1/1/23, whereas "Linux-X64-cargo-b2" may be from 2/1/23.
-                  # github will match the most recent cache ("b2") when searching for caches and finding multiple matches
-                  # the "-" on the end of the key acts like "-*" where the "*" can be any number of characters, including none
-                  key: cargo-build-Linux-X64-4272be834f81415739ca041ad13e2e2cf009e9bca53a10893822ca1af4b8b0a8-5894336284-1
+                      node_modules
+                  # note that restoring a cache in github is a pain. The trailing '-' matches any string after the '-', therefore 'abc-' would match a cache named 'abc-1234' or 'abc-5678', etc.
+                  # the problem is 'abc-' will not match a cache named 'abc'! So if you're using wildcard cache name selectors like this, you need a field that changes as the suffix to become the wildcard
+                  # here we're setting the key to an unused cache key so it falls back to the wildcard selector in `restore-keys`
+                  key: some-unused-cache-key
                   restore-keys: |
-                      cargo-build-${{ runner.os }}-${{ runner.arch }}-${{ hashFiles('**/Cargo.toml', '**/Cargo.lock') }}-
-                      cargo-build-${{ runner.os }}-${{ runner.arch }}-
-                      cargo-build-${{ runner.os }}-
-                      cargo-build-
+                      project-cache-${{ runner.os }}-${{ runner.arch }}-
 
-            # Check for clippy advice
             - name: Clippy
               run: |
                   cd protocol/dev
                   npm run cli -- clippy --docker -- -- -D warnings
 
-            # Do the build
             - name: Build contract
               id: build
               run: |
                   cd protocol/dev
                   npm run cli -- build --docker
 
-            # Do unit testing
             - name: Test contract
               run: |
                   cd protocol/dev
                   RUST_BACKTRACE=1 npm run cli -- test --docker
-                  result=$?
-                  exit $result
-
-            - name: Cleanup cargo build caches
-              if: always() && (${{ steps.build.conclusion }} == "success" || ${{ steps.build.conclusion }} == "failure")
-              run: |
-                  set +e; gh extension install actions/gh-actions-cache; set -e
-                  REPO=${{ github.repository }}
-                  echo "Fetching list of cache key"
-                  # remove all except the most recent cached build
-                  # we leave the latest cached build to be used by other workflows which may be running in parallel (i.e. there is always at least one cached build at any given time)
-                  cacheKeys=$(gh actions-cache list --sort created-at --order desc --limit 100 -R $REPO --key cargo-build-${{ runner.os }}-${{ runner.arch }}-${{ hashFiles('**/Cargo.toml', '**/Cargo.lock') }}- | cut -f 1 | tail -n +3)
-                  echo caches to be removed:
-                  echo ${cacheKeys}
-                  # delete the stale caches
-                  ## Setting this to not fail the workflow while deleting cache keys. 
-                  set +e
-                  for cacheKey in $cacheKeys
-                  do
-                      gh actions-cache delete $cacheKey -R $REPO --confirm
-                  done
-
-            # Save build + test files to cache, use for incremental builds in other runs to speed up future workflows with minor changes
-            - name: Save cargo build to cache
-              uses: actions/cache/save@v3
-              # save cache if build work has been done, independent of whether it failed/succeeded
-              if: always() && (${{ steps.build.conclusion }} == "success" || ${{ steps.build.conclusion }} == "failure")
-              with:
-                  path: |
-                      protocol/target
-                  # store this version in the cache tagged with the id of this job. This differentiates it from any other caches for the same build without mutating them, as other workflows may be using them
-                  key: cargo-build-${{ runner.os }}-${{ runner.arch }}-${{ hashFiles('**/Cargo.toml', '**/Cargo.lock') }}-${{ github.run_id }}-${{ github.run_attempt }}
