--- a/.github/workflows/tests_provider.yml
+++ b/.github/workflows/tests_provider.yml
@@ -62,6 +62,8 @@ jobs:
           docker compose --file ./docker/docker-compose.test.yml up -d
           docker container ls
 
+      - run: ls -lah
+
       - run: npm install
 
       # Checks if the git hash of packages is the same after running linting by comparing the git tree hash before
