--- a/.github/workflows/tests_provider.yml
+++ b/.github/workflows/tests_provider.yml
@@ -17,23 +17,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Check github refname
-        run: |
-          echo ${{ github.ref }}
-          echo ${{ github.ref_name }}
-          echo ${{ github.head_ref }}
-          echo ${{ github.base_ref }}
-
-      - name: Remove stopped containers
-        run: docker rm $(docker ps -a -q) || true
-
-      - name: Clone captcha
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.head_ref }}
-          repository: prosopo/captcha
-          path: captcha
-          submodules: recursive
+      # Checkout the repo
+      - uses: actions/checkout@v3
 
       - run: mkdir -p protocol/cargo-cache
       - run: mkdir -p protocol/target
