--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -8,7 +8,7 @@
     "scripts": {
         "clean": "tsc --build --clean",
         "build": "tsc --build --verbose",
-        "test": "NODE_ENV=test ts-mocha 'tests/**/*.test.ts'",
+        "test": "NODE_ENV=test vitest 'tests/**/*.test.ts'",
         "lint": "npx eslint .",
         "lint:fix": "npx eslint . --fix"
     },
@@ -34,8 +34,8 @@
         "@types/chai": "^4.3.5",
         "@types/mocha": "^10.0.1",
         "chai": "^4.3.7",
-        "mocha": "^10.2.0",
-        "typescript": "^4.9.5"
+        "typescript": "^4.9.5",
+        "vitest": "^0.34.2"
     },
     "repository": {
         "type": "git",
