--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -8,7 +8,6 @@
     "scripts": {
         "clean": "tsc --build --clean",
         "build": "tsc --build --verbose",
-        "test": "NODE_ENV=test ts-mocha 'tests/**/*.test.ts'",
         "lint": "npx eslint .",
         "lint:fix": "npx eslint . --fix"
     },
@@ -16,6 +15,8 @@
     "license": "Apache-2.0",
     "dependencies": {
         "@prosopo/common": "^0.1.17",
+        "@prosopo/types": "^0.1.17",
+        "@prosopo/util": "^0.1.17",
         "glob": "^10.0.0"
     },
     "devDependencies": {
@@ -32,26 +33,17 @@
         "@types/react-dom": "^18.2.4",
         "@typescript-eslint/eslint-plugin": "^5.59.5",
         "@typescript-eslint/parser": "^5.30.7",
-        "compression-webpack-plugin": "^10.0.0",
         "eslint": "^8.40.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-unused-imports": "^2.0.0",
-        "html-webpack-plugin": "^5.5.3",
-        "i18next-scanner-webpack": "^0.9.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "regenerator-runtime": "^0.14.0",
         "rollup-plugin-cleanup": "^3.2.1",
-        "style-loader": "^3.3.2",
-        "terser-webpack-plugin": "^5.3.9",
         "tsconfig-paths": "^4.2.0",
         "vite": "^4.4.9",
         "vite-bundle-visualizer": "^0.10.0",
-        "webpack": "^5.88.2",
-        "webpack-bundle-analyzer": "^4.9.0",
-        "webpack-json-access-optimizer": "^1.1.0",
-        "webpack-watch-files-plugin": "^1.2.1",
         "typescript": "^4.9.5"
     },
     "repository": {
