--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -10,7 +10,7 @@
         "lint": "npx eslint .",
         "lint:fix": "npx eslint . --fix",
         "cli": "node ./dist/js/cli.js",
-        "test": "NODE_ENV=test ts-mocha 'tests/**/*.test.ts'"
+        "test": "vitest 'tests/**/*.test.ts'"
     },
     "main": "./dist/index.js",
     "type": "module",
