--- a/.github/workflows/tests_provider.yml
+++ b/.github/workflows/tests_provider.yml
@@ -1,4 +1,4 @@
-name: Provider Tests
+name: tests_provider
 
 on:
   pull_request:
@@ -15,83 +15,47 @@ env:
 
 jobs:
   build:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ ubuntu-latest ]
-    runs-on: ${{ matrix.os }}
-
+    runs-on: ubuntu-latest
     steps:
-      - name: Check github refname
-        run: |
-          echo ${{ github.ref }}
-          echo ${{ github.ref_name }}
-          echo ${{ github.head_ref }}
-          echo ${{ github.base_ref }}
+      # Checkout the repo
+      - uses: actions/checkout@v3
 
-      - name: Remove stopped containers
-        run: docker rm $(docker ps -a -q) || true
+      - run: mkdir -p protocol/cargo-cache
+      - run: mkdir -p protocol/target
+      - run: mkdir -p node_modules
+      - run: mkdir -p .cache/Cypress
 
-      - name: Clone captcha
-        uses: actions/checkout@v3
+      - name: Restore cache
+        uses: actions/cache/restore@v3
         with:
-          ref: ${{ github.head_ref }}
-          repository: prosopo/captcha
-          path: captcha
-          submodules: recursive
+            path: |
+                protocol/cargo-cache
+                protocol/target
+                node_modules
+                .cache/Cypress
+            # note that restoring a cache in github is a pain. The trailing '-' matches any string after the '-', therefore 'abc-' would match a cache named 'abc-1234' or 'abc-5678', etc.
+            # the problem is 'abc-' will not match a cache named 'abc'! So if you're using wildcard cache name selectors like this, you need a field that changes as the suffix to become the wildcard
+            # here we're setting the key to an unused cache key so it falls back to the wildcard selector in `restore-keys`
+            key: some-unused-cache-key
+            restore-keys: |
+                project-cache-${{ runner.os }}-${{ runner.arch }}-
 
-
-      - run: mkdir -p ~/image-cache
-
-      - id: image-cache
-        uses: actions/cache@v3
-        with:
-          path: ~/image-cache
-          key: image-cache-docker-${{ runner.os }}-${{ hashFiles('./captcha/docker/docker-compose.test.yml') }}
-
-      - if: steps.image-cache.outputs.cache-hit != 'true'
-        run: |
-          docker pull prosopo/substrate-contracts-node:v0.25
-          docker save -o ~/image-cache/prosopo.tar prosopo/substrate-contracts-node:v0.25
-          docker pull mongo:5.0.4
-          docker save -o ~/image-cache/mongo.tar mongo:5.0.4
-
-      - if: steps.image-cache.outputs.cache-hit == 'true'
-        run: |
-          ls ~/image-cache
-          docker load -i ~/image-cache/prosopo.tar
-          docker load -i ~/image-cache/mongo.tar
+      - run: docker pull prosopo/substrate-contracts-node:v0.25
+      - run: docker pull mongo:5.0.4
 
       - name: Start the docker images
         run: |
-          cd captcha
           docker compose --file ./docker/docker-compose.test.yml up -d
           docker container ls
 
-      - id: node-cache
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: node-cache-${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            node-cache-${{ runner.os }}-
+      - run: ls -lah
 
-      - if: ${{ steps.node-cache.outputs.cache-hit == 'true' }}
-        run: |
-          cd ~/.npm
-          ls
-
-      - name: Install dependencies
-        run: |
-          cd captcha
-          ls .
-          npm install
+      - run: npm install
 
       # Checks if the git hash of packages is the same after running linting by comparing the git tree hash before
       # linting to a temporary git index file and root tree hash after linting
       - name: Linting check
         run: |
-          cd captcha
           PACKAGES_HASH=$(git show HEAD --format=%T | head -1)
           npm run lint:fix
           cp .git/index /tmp/git_index
@@ -108,7 +72,6 @@ jobs:
       - name: Build provider and dependencies
         # Next few lines should contain the number of packages that provider depends on (check tsconfig.json)
         run: |
-          cd captcha
           echo $(npx tsc --version)
           cd dev && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
           cp env.test .env.test
@@ -118,7 +81,6 @@ jobs:
 
       - name: Deploy the contracts and run the unit tests
         run: |
-          cd captcha
           npm run deploy_protocol
           npm run deploy_dapp
           git status | head -n 1
@@ -130,7 +92,6 @@ jobs:
 
       - name: Reset the docker containers
         run: |
-          cd captcha
           docker compose --file ./docker/docker-compose.test.yml down
           docker compose --file ./docker/docker-compose.test.yml up -d
           docker container ls
@@ -141,7 +102,6 @@ jobs:
 
       - name: Deploy the contracts and run the cypress tests on client-example
         run: |
-          cd captcha
           cp demos/client-example-server/env.development demos/client-example-server/.env.test
           cp demos/client-example/env.development demos/client-example/.env.test
           cp dev/env.test dev/.env.test
@@ -162,9 +122,4 @@ jobs:
           cat client-example.log
           cd demos/client-example && NODE_ENV=test npm run cypress:run
           
-
-      - name: Remove the docker containers
-        run: |
-          cd captcha
-          docker compose --file ./docker/docker-compose.test.yml down
 
