--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -16,6 +16,9 @@
     ],
     "references": [
         {
+            "path": "../../dev/config"
+        },
+        {
             "path": "../common"
         },
         {
