--- a/.github/workflows/image_provider.yml
+++ b/.github/workflows/image_provider.yml
@@ -78,7 +78,7 @@ jobs:
       # build the cli production bundle
       - name: Build cli production bundle
         run: |
-          cp ./dev/env.rococo ./packages/cli/.env.production
+          cp ./dev/scripts/env.rococo ./packages/cli/.env.production
           NODE_ENV=production npm run -w @prosopo/cli build:prod
 
       # create the provider image
@@ -98,7 +98,7 @@ jobs:
       - name: Create new procaptcha JS bundle
         run: |
           if [ "${{ github.ref }}" != "refs/heads/main" ]; then exit 0; fi
-          cp ./dev/env.rococo ./packages/cli/.env.production
+          cp ./dev/scripts/env.rococo ./packages/cli/.env.production
           NODE_ENV=production npm run -w @prosopo/procaptcha-bundle build:prod
           docker build -f ./docker/images/js.server.dockerfile . -t prosopo/js_server:latest
           docker push prosopo/js_server:latest
