--- a/.github/workflows/tests_provider.yml
+++ b/.github/workflows/tests_provider.yml
@@ -104,8 +104,8 @@ jobs:
         run: |
           cp demos/client-example-server/env.development demos/client-example-server/.env.test
           cp demos/client-example/env.development demos/client-example/.env.test
-          cp dev/env.test dev/.env.test
-          cp dev/env.test packages/cli/.env.test
+          cp dev/scripts/env.test dev/.env.test
+          cp dev/scripts/env.test packages/cli/.env.test
           NODE_ENV=test npm run deploy_protocol
           NODE_ENV=test npm run deploy_dapp
           NODE_ENV=test npm run setup
