--- a/packages/datasets-fs/package.json
+++ b/packages/datasets-fs/package.json
@@ -20,6 +20,7 @@
         "@prosopo/types": "^0.1.16",
         "@prosopo/util": "^0.1.16",
         "bcrypt": "^5.1.0",
+        "es-main": "^1.2.0",
         "fs": "^0.0.1-security",
         "lodash": "^4.17.21",
         "noble-hashes": "^0.3.1",
