--- a/packages/procaptcha-bundle/package.json
+++ b/packages/procaptcha-bundle/package.json
@@ -11,7 +11,7 @@
         "clean": "tsc --build --clean",
         "build": "tsc --build --verbose",
         "start": "webpack serve --mode development",
-        "build:dev": "npm run build && vite build --mode development",
+        "build:dev": "npm run build && vite build --mode development --debug",
         "build:prod": "npm run build && vite build --mode production",
         "lint": "npx eslint .",
         "lint:fix": "npx eslint . --fix"
