--- a/packages/file-server/package.json
+++ b/packages/file-server/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@prosopo/common": "^0.1.17",
         "dotenv": "^16.0.1",
+        "es-main": "^1.2.0",
         "express": "^4.18.2",
         "node-fetch": "^2.6.12",
         "sharp": "^0.32.4"
