add build command for demos that is a wrapper for build:prod

--- a/demos/client-example-server/package.json
+++ b/demos/client-example-server/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "vite serve --mode=development --config ./vite.config.ts --host",
     "start": "node ./dist/bundle/app.js",
+    "build": "npm run build:prod",
     "build:prod": "vite build --mode=production --config ./vite.config.ts",
     "build:dev": "vite build --mode=development --config ./vite.config.ts",
     "clean": "tsc --build --clean",
