--- a/demos/client-example/package.json
+++ b/demos/client-example/package.json
@@ -28,6 +28,7 @@
     },
     "scripts": {
         "start": "tsc --build --verbose && vite serve --mode=development --config vite.config.ts --port 9230 --host --force",
+        "build": "npm run build:prod",
         "build:prod": "tsc --build --verbose && vite build --mode=production --config vite.config.ts --outDir dist --emptyOutDir",
         "build:dev": "tsc --build --verbose && vite build --mode=development --config vite.config.ts --outDir dist --emptyOutDir",
         "clean": "tsc --build --clean",
