--- a/.github/workflows/tests_provider.yml
+++ b/.github/workflows/tests_provider.yml
@@ -109,7 +109,7 @@ jobs:
         run: |
           cp demos/client-example-server/env.development demos/client-example-server/.env.test
           cp demos/client-example/env.development demos/client-example/.env.test
-          cp dev/scripts/env.test dev/.env.test
+          cp dev/scripts/env.test dev/scripts/.env.test
           cp dev/scripts/env.test packages/cli/.env.test
           NODE_ENV=test npm run deploy_protocol
           NODE_ENV=test npm run deploy_dapp
