fixes and progress bar

--- a/packages/datasets-fs/package.json
+++ b/packages/datasets-fs/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@prosopo/datasets-fs",
-    "version": "0.1.16",
+    "version": "0.1.17",
     "author": "PROSOPO LIMITED <info@prosopo.io>",
     "license": "Apache-2.0",
     "private": false,
@@ -16,9 +16,10 @@
     "types": "./dist/index.d.ts",
     "dependencies": {
         "@polkadot/util": "^12.3.2",
-        "@prosopo/types": "^0.1.16",
-        "@prosopo/util": "^0.1.16",
+        "@prosopo/types": "^0.1.17",
+        "@prosopo/util": "^0.1.17",
         "bcrypt": "^5.1.0",
+        "cli-progress": "^3.12.0",
         "fs": "^0.0.1-security",
         "lodash": "^4.17.21",
         "noble-hashes": "^0.3.1",
