--- a/.github/workflows/tests_provider.yml
+++ b/.github/workflows/tests_provider.yml
@@ -7,6 +7,9 @@ on:
       - '**.ts'
       - '**.js'
       - '.github/workflows/tests_provider.yml'
+      - '**.json'
+    paths-ignore:
+      - 'protocol'
 
 env:
   CARGO_TERM_COLOR: always
