--- a/protocol/contracts/proxy/Cargo.toml
+++ b/protocol/contracts/proxy/Cargo.toml
@@ -1,13 +1,29 @@
 [package]
 name = "proxy"
-version = "4.0.0"
-authors = ["Chris Taylor chris@prosopo.io", "George Oastler george@prosopo.io"]
+version = "0.1.17"
+authors = ["Chris Taylor chris@prosopo.io", "George Oastler george@prosopo.io", "Vincenzo Ferrara", "Siniša Čanak"]
 edition = "2021"
+documentation = "https://github.com/prosopo/captcha"
+repository = "https://github.com/prosopo/captcha"
+homepage = "https://github.com/prosopo/captcha"
+license-file="../../../LICENSE"
 
 [dependencies]
 ink = { git = "https://github.com/prosopo/ink_sr25519", branch="4.3.0-custom", default-features = false }
 scale = { package = "parity-scale-codec", version = "3.4", default-features = false, features = ["derive"] }
 scale-info = { version = "2.7.0", default-features = false, features = ["derive"], optional = true }
+
+[dependencies.common]
+version = "0.1.17"
+path = "../../contracts/common"
+default-features = false
+features = ["ink-as-dependency"]
+
+[dev-dependencies.common]
+version = "0.1.17"
+path = "../../contracts/common"
+default-features = false
+features = ["test-dependency"]
 
 [dependencies.inject_self_macro]
 version = "0.3.0"
@@ -20,18 +36,6 @@ path = "../../crates/named_functions_macro"
 [dependencies.disable_macro]
 version = "0.3.0"
 path = "../../crates/disable_macro"
-
-[dependencies.common]
-version = "0.3.0"
-path = "../../contracts/common"
-default-features = false
-features = ["ink-as-dependency"]
-
-[dev-dependencies.common]
-version = "0.3.0"
-path = "../../contracts/common"
-default-features = false
-features = ["test-dependency"]
 
 [lib]
 path = "src/lib.rs"
