--- a/protocol/contracts/common/Cargo.toml
+++ b/protocol/contracts/common/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "common"
-version = "0.3.0"
+version = "0.1.17"
 authors = ["Chris Taylor chris@prosopo.io", "George Oastler george@prosopo.io", "Vincenzo Ferrara", "Siniša Čanak"]
 edition = "2021"
+documentation = "https://github.com/prosopo/captcha"
+repository = "https://github.com/prosopo/captcha"
+homepage = "https://github.com/prosopo/captcha"
+license-file="../../../LICENSE"
 
 [dependencies]
 ink = { git = "https://github.com/prosopo/ink_sr25519", branch="4.3.0-custom", default-features = false }
