--- a/protocol/contracts/proxy/Cargo.toml
+++ b/protocol/contracts/proxy/Cargo.toml
@@ -12,30 +12,11 @@ license-file="../../../LICENSE"
 ink = { git = "https://github.com/prosopo/ink_sr25519", branch="4.3.0-custom", default-features = false }
 scale = { package = "parity-scale-codec", version = "3.4", default-features = false, features = ["derive"] }
 scale-info = { version = "2.7.0", default-features = false, features = ["derive"], optional = true }
+common = { version = "0.1.17", path = "../../contracts/common", default-features = false, features = ["ink-as-dependency"] }
+disable_macro = { version = "0.3.0", path = "../../crates/disable_macro" }
 
-[dependencies.common]
-version = "0.1.17"
-path = "../../contracts/common"
-default-features = false
-features = ["ink-as-dependency"]
-
-[dev-dependencies.common]
-version = "0.1.17"
-path = "../../contracts/common"
-default-features = false
-features = ["test-dependency"]
-
-[dependencies.inject_self_macro]
-version = "0.3.0"
-path = "../../crates/inject_self_macro"
-
-[dependencies.named_functions_macro]
-version = "0.3.0"
-path = "../../crates/named_functions_macro"
-
-[dependencies.disable_macro]
-version = "0.3.0"
-path = "../../crates/disable_macro"
+[dev-dependencies]
+common = { version = "0.1.17", path = "../../contracts/common", default-features = false, features = ["test-dependency"] }
 
 [lib]
 path = "src/lib.rs"
