--- a/protocol/contracts/common/Cargo.toml
+++ b/protocol/contracts/common/Cargo.toml
@@ -12,6 +12,7 @@ license-file="../../../LICENSE"
 ink = { git = "https://github.com/prosopo/ink_sr25519", branch="4.3.0-custom", default-features = false }
 scale = { package = "parity-scale-codec", version = "3.4", default-features = false, features = ["derive"] }
 scale-info = { version = "2.7.0", default-features = false, features = ["derive"], optional = true }
+disable_macro = { version = "0.1.17", path = "../../crates/disable_macro" }
 
 [lib]
 path = "src/lib.rs"
