--- a/protocol/contracts/captcha/Cargo.toml
+++ b/protocol/contracts/captcha/Cargo.toml
@@ -7,6 +7,7 @@ documentation = "https://github.com/prosopo/captcha"
 repository = "https://github.com/prosopo/captcha"
 homepage = "https://github.com/prosopo/captcha"
 license-file="../../../LICENSE"
+rust-version="1.68"
 
 [dependencies]
 ink = { git = "https://github.com/prosopo/ink_sr25519", branch="4.3.0-custom", default-features = false }
