--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -21,9 +21,11 @@
     },
     "devDependencies": {
         "@types/chai": "^4.3.5",
+        "@types/lodash": "^4.14.197",
         "@types/mocha": "^10.0.1",
+        "@types/seedrandom": "^3.0.5",
         "chai": "^4.3.7",
-        "typescript": "^4.9.5"
+        "typescript": "^5.2.2"
     },
     "repository": {
         "type": "git",
