--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -10,7 +10,7 @@
         "lint": "npx eslint .",
         "lint:fix": "npx eslint . --fix",
         "cli": "node ./dist/js/cli.js",
-        "test": "vitest --run"
+        "test": "vitest --run --coverage"
     },
     "main": "./dist/index.js",
     "type": "module",
@@ -24,6 +24,7 @@
         "@types/lodash": "^4.14.197",
         "@types/mocha": "^10.0.1",
         "@types/seedrandom": "^3.0.5",
+        "@vitest/coverage-v8": "^0.34.3",
         "chai": "^4.3.7",
         "typescript": "^5.2.2"
     },
