--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -33,8 +33,9 @@
         "@types/chai": "^4.3.5",
         "@types/mocha": "^10.0.1",
         "chai": "^4.3.7",
-        "typescript": "^4.9.5",
-        "vitest": "^0.34.2"
+        "typescript": "^5.2.2",
+        "vitest": "^0.34.2",
+        "@vitest/coverage-v8": "^0.34.3"
     },
     "repository": {
         "type": "git",
