--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -26,7 +26,7 @@
         "@types/seedrandom": "^3.0.5",
         "@vitest/coverage-v8": "^0.34.3",
         "chai": "^4.3.7",
-        "vitest": "^0.34.2"
+        "vitest": "^0.34.2",
         "typescript": "^5.2.2"
     },
     "repository": {
