--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "../../tsconfig.build.json",
+    "extends": "../../tsconfig.cjs.json",
     "compilerOptions": {
         "rootDir": "./src",
         "outDir": "./dist"
