fix lib checking in tsconfig

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -19,6 +19,7 @@
         "esModuleInterop": true,
         "isolatedModules": true,
         "composite": true,
+        "skipLibCheck": true,
         "noErrorTruncation": true
     }
 }
