--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,18 +1,13 @@
 {
-  "extends": "../../tsconfig.build.json",
-  "compilerOptions": {
-    "rootDir": "./src",
-    "outDir": "./dist",
-    "module": "esnext",
-    "target": "esnext",
-  },
-  "include": [
-    "./src/**/*.ts",
-    "./src/*.ts",
-  ],
-  "references": [
-    {
-      "path": "../common"
-    }
-  ]
+    "extends": "../../tsconfig.esm.json",
+    "compilerOptions": {
+        "rootDir": "./src",
+        "outDir": "./dist"
+    },
+    "include": ["./src/**/*.ts", "./src/**/*.json"],
+    "references": [
+        {
+            "path": "../common"
+        }
+    ]
 }
