--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -1,24 +1,19 @@
 {
-  "extends": "../../tsconfig.build.json",
-  "compilerOptions": {
-    "rootDir": "./src",
-    "outDir": "./dist",
-    "module": "esnext",
-    "target": "esnext"
-  },
-  "include": [
-    "./src/**/*.ts",
-    "./src/*.ts",
-  ],
-  "references": [
-    {
-      "path": "../common"
+    "extends": "../../tsconfig.esm.json",
+    "compilerOptions": {
+        "rootDir": "./src",
+        "outDir": "./dist"
     },
-    {
-      "path": "../types"
-    },
-    {
-      "path": "../types-database"
-    }
-  ]
+    "include": ["./src/**/*.ts", "./src/**/*.json"],
+    "references": [
+        {
+            "path": "../common"
+        },
+        {
+            "path": "../types"
+        },
+        {
+            "path": "../types-database"
+        }
+    ]
 }
