--- a/packages/datasets-fs/tsconfig.json
+++ b/packages/datasets-fs/tsconfig.json
@@ -1,11 +1,10 @@
 {
-    "extends": "../../tsconfig.build.json",
+    "extends": "../../tsconfig.esm.json",
     "compilerOptions": {
         "rootDir": "./src",
         "outDir": "./dist"
     },
-    "include": ["./src/**/*.ts"],
-    "exclude": ["**/*.test.ts"],
+    "include": ["./src/**/*.ts", "./src/**/*.json"],
     "references": [
         {
             "path": "../util"
